Changelog
=========

4.7-dev - (unreleased)
----------------------

4.6 - (2012-03-05)
------------------
 * Bug fix: Fixed dependencies to eea.forms and eea.vocab
   [voineali]

4.5 - (2012-02-06)
------------------
 * Bug fix: Removed eea.rdfmarshaller dependency
   [voineali]

4.4 - (2011-12-16)
------------------
 * Bug fix: Made Publication file field non-required
   [voineali #4833]

4.3 - (2011-11-24)
------------------
 * Bug fix: Fixed 'NoneType' and 'str' error on some publications view [ghicaale]
 * Bug fix: Allow reports_view browser_view to be customized by portal_view_customizations by making it inherit
   from BrowserView instead of object [ichimdav #4783]

4.2 - (2011-11-23)
------------------
 * Bug fix: Removed duplicated multimedia in template, now we have viewlets.
   [demarant #4779]

4.1 - (2011-11-18)
------------------
 * Rerelease broken egg

4.0 - (2011-11-18)
------------------
 * Feature: Added SerialTitle2Surf adapter [tiberich #4250] (backport v3.3)
 * Change: include effective/publish date on template since Folder types do not show document_byline [demarant].
 * Change: include published and public draft images when determining the cover of a publication [tiberich]
 * Change: removed the old themes portlet, now part of the main template as viewlet [demarant]
 * Change: Included ManagementPlan Field and Widget from eea.forms instead of eea.dataservice [szabozo0]
 * Feature: Added upgrade steps
  [voineali #4392]
 * Feature: Plone 4.0.4 compatible release
  [voineali #4231]

3.2 - (2011-03-29)
------------------
 * Cleanup: Removed slc.publications dependency [voineali #4207]
 * Bug fix: Fixed getCoverImage to work with new ATBlob [ghicaale #4200]
 * Cleanup: Fixed all pylint, pyflakes violations [voineali #4140]
 * Cleanup: Removed portal_migration scripts as portal_migration is deprecated.
   Please check that there are no un-applied migration scripts before
   upgrading to this version [voineali #4139]